update flake8 config

--- a/{{cookiecutter.project_slug}}/setup.cfg
+++ b/{{cookiecutter.project_slug}}/setup.cfg
@@ -15,7 +15,9 @@ replace = __version__ = '{new_version}'
 universal = 1
 
 [flake8]
-exclude = docs
+exclude = docsv
+max-line-length = 88
+docstring-convention = google
 
 {%- if cookiecutter.use_pytest == 'y' %}
 [tool:pytest]
